Fix missing overflow on starwars

--- a/app/assets/stylesheets/front/components/_starwars.scss
+++ b/app/assets/stylesheets/front/components/_starwars.scss
@@ -7,12 +7,14 @@ $starwars-perspective-rotation: 25deg;
   justify-content: center;
   min-height: 100vh;
   min-height: calc(100vh - var(--vh-offset));
+  padding-bottom: rem(190px);
   position: relative;
 
   &.is-initialized {
     display: block;
     height: 100vh;
     height: calc(100vh - var(--vh-offset));
+    padding-bottom: 0;
     overflow: hidden;
   }
 
@@ -27,6 +29,7 @@ $starwars-perspective-rotation: 25deg;
 
   .c-starwars__inner {
     height: 100%;
+    overflow: hidden;
 
     .c-starwars:not(.is-initialized) & {
       display: flex;
